# ct-final

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  callbacks.py  git_stats.html  git_stats.py  index.html  layout.py  mkdocs.yml  plugin_loader.py  pyproject.toml  sitemap.xml
.github/workflows/: cov.yml  docs.yml  publish.yml  python-app.yml  test.yml
committracker/: __init__.py  __main__.py  callbacks.py  git_stats.py  layout.py  main.py  plugin_loader.py  utils.py
committracker/plugins/: branch_information.py  code_quality.py  commit_graph.py  commit_type.py  contributors.py  git_statistics.py
contributors/: index.html
dev/: index.html
docs/: contributors.md  dev.md  functions.md  index.md
functions/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/contributors/: index.html
site/dev/: index.html
site/functions/: index.html
site/search/: search_index.json
tests/: __init__.py  test_branch_information.py  test_code_quality.py  test_commit_graph.py  test_commit_type.py  test_contributors.py  test_git_statistics.py  test_git_stats.py  test_main.py
