[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-tracker"
version = "0.1.0"
description = "Commit Tracker analyzes Git repositories to present comprehensive statistics."
authors = [{name = "André F. Costa", email = "afmcosta@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["git", "analysis", "commit", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git"
]
dependencies = [
    "dash",
    "GitPython",
    "pandas",
    "plotly",
    "dash-bootstrap-components"
]

[project.scripts]
commit-tracker = "committracker.__main__:main"

[project.entry-points."commit_tracker.plugins"]
clone_remote_repo = "commit_tracker.git_stats:clone_remote_repo"
extract_git_stats = "commit_tracker.git_stats:extract_git_stats"
extract_branches_info_new = "commit_tracker.git_stats:extract_branches_info_new"
categorize_commit_type = "commit_tracker.git_stats:categorize_commit_type"

[project.optional-dependencies]
dev = [
    "black",
    "flake8 >= 6.0.0",
    "flake8-black",
    "flake8-builtins",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-isort",
    "flake8-pytest-style",
    "flake8-simplify",
    "Flake8-pyproject",
    "isort",
    "mypy",
    "pre-commit",
    "pytest >= 8.0",
    "pytest-cov >= 3.0.0"
]

[project.urls]
Homepage = "https://github.com/andrecosta99/commit-tracker"
Documentation = "https://andrecosta99/commit-tracker/"
Repository = "https://andrecosta99/commit-tracker"

[tool.setuptools]
packages = ["committracker"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--mypy --doctest-modules"
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
extend-select = ["B9", "C4"]
max-line-length = 120
max-doc-length = 120
ignore = [
    "B905", "E203", "D100", "D104", "E501", "W503", "D103", "D202", "D205", "D212", "D415", "W505", "B950", "E402", "PT001", "PT004", "SIM117", "D200", "F401", "D103", "D202", "D205", "D212", "D415", "W505", "B950", "E402", "PT001", "D200", "F401", "PT004", "SIM117", "W505", "B950", "D103", "D202", "D205", "D212", "D415"
]
doctests = true
exclude = [
    ".git",
    "__pycache__",
    ".*cache",
    "build",
    "dist",
    "env",
    "venv",
    ".eggs",
    "*.egg",
    "docs"
]
docstring-convention = "google"
